[package]
name = "dnstoolkit"
version = "0.1.0"
authors = ["Vigneshwaran P <vignesh@cyence.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.5.1"
idna = "0.2.0"
thiserror = "1.0.22"
itertools = "*"
lazy_static = "1.4.0"