[package]
name = "dnstoolkit"
version = "0.1.0"
authors = ["Vigneshwaran P <vignesh@cyence.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.5.1"
thiserror = "1.0.22"
lazy_static = "1.4.0"

[dependencies.idna]
git = "https://github.com/servo/rust-url.git"
branch = 'master'
path = "/idna"
tag = "v2.2.0"